<resources>
    <string name="app_name">GigALoan</string>
    <string name="login_text">LogIn</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="logint_bttn_text">Login</string>
    <string name="register_bttn_text">Register!</string>
    <string name="Client_ck_box_text">Client</string>
    <string name="UserType_Message_text">What Type of user are you????</string>
    <string name="no_rbttn">N</string>
    <string name="Continue_bttn_text">Continue</string>
    <string name="personla_info">Personal Information</string>
    <string name="fname">First Name</string>

</resources>
